# MPI-labs

./: .gitignore  CMakeLists.txt  boltzman.sh  broadcast.sh  capacity.sh  latency.sh  main-column.sh  reduce.sh
Lab1/: CMakeLists.txt
Lab1/BroadcastOPS/: BroadcastOPS.c  CMakeLists.txt  broadcast.sh
Lab1/ChannelCapacity/: CMakeLists.txt  ChannelCapacity.c  capacity.sh
Lab1/Latency/: CMakeLists.txt  Latency.c  latency.sh
Lab1/ReduceOPS/: CMakeLists.txt  RediceOPS.c  ReduceOPS.c  reduce.sh
Lab2/: CMakeLists.txt  description.md
Lab2/MainElementInColumn/: CMakeLists.txt  MainElementInColumn.c  main-column.sh
Lab3/: CMakeLists.txt  boltzman.sh  boltzmann.c
Test/: CMakeLists.txt  hello_world_mpi.c
